[TRUS-2673] - Update content, correct heading spacing, update unit specs

--- a/app/assets/stylesheets/partials/heading.scss
+++ b/app/assets/stylesheets/partials/heading.scss
@@ -68,6 +68,6 @@
   pointer-events: auto;
 }
 
-.govuk-fieldset__heading {
-  margin: 0;
-}
+// .govuk-fieldset__heading {
+//   margin: 0;
+// }
